--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -3,7 +3,7 @@ FROM node:14
 # Create app directory
 WORKDIR /usr/src/app
 
-RUN npm install
+RUN npm install -g npm-watch
 
 RUN apt-get update
 RUN apt-get -y upgrade
@@ -13,4 +13,3 @@ RUN apt-get -y install r-base-dev
 RUN Rscript -e 'install.packages(c("cpm", "quantmod"), ,repos = "http://cran.us.r-project.org")'
 
 EXPOSE 3000
-CMD [ "npm", "start" ]
