--- a/app/package.json
+++ b/app/package.json
@@ -2,8 +2,19 @@
   "name": "app",
   "version": "0.0.0",
   "private": true,
+  "watch": {
+    "start": {
+      "patterns": [
+        "routes",
+        "views"
+      ],
+      "extensions": "js",
+      "quiet": false
+    }
+  },
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "watch": "npm-watch"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
