--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,8 @@ version: "3.9"
 services:
   web:
     image: borjagomez/cpdbackend
+    volumes:
+      - ./app:/usr/src/app
     ports:
       - "3000:3000"
+    command: npm-watch
