--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: borjagomez/cpdbackend
     volumes:
       - ./app:/usr/src/app
+      - /usr/src/app/node_modules
     ports:
       - "3000:3000"
-    command: bash -c "npm install && npm-watch"
+    command: npm-watch
