Fix uuid library + Docker with node_modules

--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
     "start": {
       "patterns": [
         "routes",
-        "views"
+        "views",
+        "controllers"
       ],
       "extensions": "js",
       "quiet": false
@@ -22,6 +23,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "uuid": "^8.3.2"
   }
 }
