--- a/app/package.json
+++ b/app/package.json
@@ -18,12 +18,14 @@
     "watch": "npm-watch"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.8.5",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "r-script": "0.0.4",
     "uuid": "^8.3.2"
   }
 }
