--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "r-script": "0.0.4",
+    "shell-exec": "^1.0.2",
     "uuid": "^8.3.2"
   }
 }
